Fixed caret reset error with draftjs graber spacing

--- a/src/bullet_time/style/BulletRange.css
+++ b/src/bullet_time/style/BulletRange.css
@@ -52,5 +52,5 @@
 }
 
 .bullet-block div{
-    display: inline;
+    display: inline-block;
 }
